--- a/hyphae-backend/composer.json
+++ b/hyphae-backend/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-migrations-bundle": "^4.0",
         "doctrine/orm": "^3.5",
         "firebase/php-jwt": "*",
+        "nelmio/api-doc-bundle": "^5.8",
         "nelmio/cors-bundle": "^2.6",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.3",
