--- a/hyphae-backend/composer.json
+++ b/hyphae-backend/composer.json
@@ -89,6 +89,8 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^4.3",
+        "fakerphp/faker": "^1.24",
         "friendsofphp/php-cs-fixer": "^3.91",
         "symfony/debug-bundle": "6.4.*",
         "symfony/maker-bundle": "^1.65",
